--- a/TODO.txt
+++ b/TODO.txt
@@ -1,3 +1,3 @@
 - make custom buttons for projects page
-- make custom design for see project page
-- make navbar reusable
+DONE - make custom design for see project page
+DONE - make navbar reusable
